Comment out use of IMPORTED_RUNTIME_ARTIFACTS
This requires CMake 3.21, too new for general usage for now

--- a/Algorithm/Sink/CMakeLists.txt
+++ b/Algorithm/Sink/CMakeLists.txt
@@ -15,5 +15,4 @@ install(TARGETS SinkExample
   bin
   )
 
-install(IMPORTED_RUNTIME_ARTIFACTS SinkExample)
-
+# install(IMPORTED_RUNTIME_ARTIFACTS SinkExample)
