--- a/Algorithm/Source/CMakeLists.txt
+++ b/Algorithm/Source/CMakeLists.txt
@@ -15,5 +15,4 @@ install(TARGETS SourceExample
   bin
   )
 
-install(IMPORTED_RUNTIME_ARTIFACTS SourceExample)
-
+# install(IMPORTED_RUNTIME_ARTIFACTS SourceExample)
