feat: vtkPythonAlgorithm subclassing as a source

--- a/Algorithm/Source/CMakeLists.txt
+++ b/Algorithm/Source/CMakeLists.txt
@@ -1,12 +1,15 @@
 add_executable(SourceExample # MACOSX_BUNDLE
   SourceExample.cxx
   vtkSource.cxx
+  vtkPythonSource.cxx
   vtkPODInt.cxx
 )
  
 target_link_libraries(SourceExample
   VTK::CommonCore
   VTK::CommonExecutionModel
+        VTK::FiltersPython
+  Python3::Python
   )
 
 
